// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component test should render and empty table correctly 1`] = `
<table
  className=" css-twyho5"
>
  <thead>
    <tr />
  </thead>
  <tbody
    className=""
  >
    <tr>
      <td
        colSpan={1}
      >
        <div
          className="  css-mr32rj"
        >
          No data
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table component test should render the correctly when using render function 1`] = `
<table
  className=" css-twyho5"
>
  <thead>
    <tr>
      <th
        className="css-y6r092"
        data-title="name"
      >
        <div>
          <span>
            name
          </span>
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    className=""
  >
    <tr
      style={
        Object {
          "height": 1,
        }
      }
    >
      <td
        className="css-do3z2j"
        data-title="name"
        style={
          Object {
            "height": "",
          }
        }
      >
        <div>
          <div
            className=""
          >
            name
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`data prop changes should update state if the data prop changes 1`] = `
<table
  class=" css-twyho5"
>
  <thead>
    <tr>
      <th
        class="css-y6r092"
        data-title="test"
      >
        <div>
          <span>
            test
          </span>
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    class=""
  >
    <tr
      style="height: 1px;"
    >
      <td
        class="css-do3z2j"
        data-title="test"
      >
        <div>
          <div
            class=""
          >
            Someone else
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
